--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "hekmatinasser/verta": "^8.1",
         "inertiajs/inertia-laravel": "^0.5.4",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
+        "morilog/jalali": "3.*",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^2.0",
         "spatie/laravel-medialibrary": "10.0.0",
         "spatie/laravel-permission": "^5.5",
