--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=project-management
 APP_ENV=local
 APP_KEY=base64:dttq7Q4bcS6bSbOzqKOcqz/q9r2D2UPgU/zED8CoZ74=
 APP_DEBUG=true
-APP_URL=http://project.test
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
